[FIX] web: do not center vertically list cells
Since [1] the content of list cells is vertically centered. In
list views with text fields containing very long descriptions,
this makes harder to find the other field values when scanning the
table. Moreover, it looks weird as the selection checkbox and
the delete icons are aligned to the top.

Note: this behavior had already been reverted as of saas-16.3.

[1] https://github.com/odoo/odoo/commit/59eac00afee88804ea9395a2a1a4d2696a3e8b2b

opw 3617667

closes odoo/odoo#146439

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -63,7 +63,6 @@
 
                 display: table-cell;
                 @include text-truncate();
-                vertical-align: middle;
 
                 &.o_list_text {
                     white-space: pre-wrap;
